tests/baselines/reference/parserShorthandPropertyAssignment2.errors.txt
parserShorthandPropertyAssignment2.ts(1,17): error TS1005: ':' expected.


==== parserShorthandPropertyAssignment2.ts (1 errors) ====
    var v = { class };
                    ~
!!! error TS1005: ':' expected.